Remove kmix as part of Kubuntu upgrade, now plasma-pa is volume applet

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.10.12) wily; urgency=medium
+
+  * Remove kmix as part of Kubuntu upgrade, now plasma-pa is volume applet
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Oct 2015 16:34:56 +0100
+
 ubuntu-release-upgrader (1:15.10.11) wily; urgency=medium
 
   * Change KDE fetcher UI from showing the HTML release notes to showing the
