Revert change from 15.10.11, already rejected from wily-proposed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:15.10.13) wily; urgency=medium
+
+  * Revert change from 15.10.11, already rejected from wily-proposed
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Oct 2015 16:56:06 +0100
+
 ubuntu-release-upgrader (1:15.10.12) wily; urgency=medium
 
   * Remove kmix as part of Kubuntu upgrade, now plasma-pa is volume applet
