--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:15.10.13.1) UNRELEASED; urgency=medium
+
+  * data/DistUpgrade.cfg: Update kernel version and types that will be
+    considered for removal. (LP: #1508539)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 21 Oct 2015 09:17:13 -0700
+
 ubuntu-release-upgrader (1:15.10.13) wily; urgency=medium
 
   * Revert change from 15.10.11, already rejected from wily-proposed
