releasing package ubuntu-release-upgrader version 1:15.10.14

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:15.10.13.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:15.10.14) wily; urgency=medium
 
   [ Brian Murray ]
   * data/DistUpgrade.cfg: Update kernel version and types that will be
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:15.10.13.1) UNRELEASED; urgency=medium
     systemd units, but no SysV init script (like lxc, ofono, or nfs-common).
     (LP: #1504897)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 21 Oct 2015 09:17:13 -0700
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 21 Oct 2015 23:40:22 +0200
 
 ubuntu-release-upgrader (1:15.10.13) wily; urgency=medium
 
