* DistUpgrade/DistUpgradeQuirks.py: add in a quirk to ensure that a linux   metapackage is installed after the release upgrade. (LP: #1509305)

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,9 @@ ubuntu-release-upgrader (1:16.04.1) UNRELEASED; urgency=medium
     data/DistUpgrade.cfg,
     data/DistUpgrade.cfg.trusty,
     pre-build.sh:
-    - updated for 15.10>16.04
+    - updated for 15.10->16.04
+  * DistUpgrade/DistUpgradeQuirks.py: add in a quirk to ensure that a linux
+    metapackage is installed after the release upgrade. (LP: #1509305)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 23 Oct 2015 13:25:32 -0700
 
