releasing package ubuntu-release-upgrader version 1:16.04.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.1) xenial; urgency=medium
 
   [ Barry Warsaw ]
   * Don't try to import janitor and NvidiaDetector in a package relative
@@ -22,7 +22,7 @@ ubuntu-release-upgrader (1:16.04.1) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeQuirks.py: improve linux metapackage check and add
     a test for it.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 23 Oct 2015 13:25:32 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 27 Oct 2015 13:45:19 -0700
 
 ubuntu-release-upgrader (1:15.10.14) wily; urgency=medium
 
