--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.2) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
+    not being available in the cache.
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 28 Oct 2015 13:25:33 -0700
+
 ubuntu-release-upgrader (1:16.04.1) xenial; urgency=medium
 
   [ Barry Warsaw ]
