Launchpad automatic translations update.

--- a/po/gd.po
+++ b/po/gd.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2013-05-23 02:43+0000\n"
-"Last-Translator: Brian Murray <brian@ubuntu.com>\n"
+"PO-Revision-Date: 2015-10-28 17:28+0000\n"
+"Last-Translator: Akerbeltz <fios@akerbeltz.org>\n"
 "Language-Team: Gaelic; Scottish <gd@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 || n==11) ? 0 : (n==2 || n==12) ? 1 : "
 "(n > 2 && n < 20) ? 2 : 3;\n"
-"X-Launchpad-Export-Date: 2015-10-28 05:31+0000\n"
-"X-Generator: Launchpad (build 17833)\n"
+"X-Launchpad-Export-Date: 2015-10-29 05:30+0000\n"
+"X-Generator: Launchpad (build 17837)\n"
 "Language: \n"
 
 #. TRANSLATORS: %s is a country
@@ -72,9 +72,10 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeCache.py:154
 msgid "Remove package in bad state"
 msgid_plural "Remove packages in bad state"
-msgstr[0] "Gluasad pacaid ann an droch staid"
-msgstr[1] "Gluasad pacaid ann an droch staid"
-msgstr[2] "Gluasad pacaidean ann an droch staid"
+msgstr[0] "Tha a' phacaid a bheir air falbh e ann an droch-staid"
+msgstr[1] "Tha na pacaidean a bheir air falbh e ann an droch-staid"
+msgstr[2] "Tha na pacaidean a bheir air falbh e ann an droch-staid"
+msgstr[3] "Tha na pacaidean a bheir air falbh e ann an droch-staid"
 
 #: ../DistUpgrade/DistUpgradeCache.py:157
 #, python-format
@@ -87,17 +88,21 @@ msgid_plural ""
 "but no archives can be found for them. Do you want to remove these packages "
 "now to continue?"
 msgstr[0] ""
-"Tha am pacaid '%s' ann an staid mì-chòrdail agus feumail air ath-stàlachadh, "
-"ach chan fhaigh lorg air tasglann sam bith dha. Bheil thu ag iarraidh "
-"gluasad am pacaid seo an dràsta airson leantainn?"
+"Tha a' phacaid \"%s\" ann an staid neo-chunbhalach agus feumaidh tu ath-"
+"stàladh ach cha do lorg sinn tasg-lann air a shon. A bheil thu airson a' "
+"phacaid seo a thoirt air falbh gus leantainn air adhart?"
 msgstr[1] ""
-"Tha am pacaid '%s' ann an staid mì-chòrdail agus feumail air ath-stàlachadh, "
-"ach chan fhaigh lorg air tasglann sam bith dha. Bheil thu ag iarraidh "
-"gluasad am pacaid seo an dràsta airson leantainn?"
+"Tha na pacaidean \"%s\" ann an staid neo-chunbhalach agus feumaidh tu ath-"
+"stàladh ach cha do lorg sinn tasg-lann air a shon. A bheil thu airson na "
+"pacaidean seo a thoirt air falbh gus leantainn air adhart?"
 msgstr[2] ""
-"Tha na pacaidean '%s' ann an staid mì-chòrdail agus feumail air ath-"
-"stàlachadh, ach chan fhaigh lorg air tasglann sam bith dha. Bheil thu ag "
-"iarraidh gluasad am pacaid seo an dràsta airson leantainn?"
+"Tha na pacaidean \"%s\" ann an staid neo-chunbhalach agus feumaidh tu ath-"
+"stàladh ach cha do lorg sinn tasg-lann air a shon. A bheil thu airson na "
+"pacaidean seo a thoirt air falbh gus leantainn air adhart?"
+msgstr[3] ""
+"Tha na pacaidean \"%s\" ann an staid neo-chunbhalach agus feumaidh tu ath-"
+"stàladh ach cha do lorg sinn tasg-lann air a shon. A bheil thu airson na "
+"pacaidean seo a thoirt air falbh gus leantainn air adhart?"
 
 #. FIXME: not ideal error message, but we just reuse a
 #. existing one here to avoid a new string
@@ -491,9 +496,10 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeController.py:877
 msgid "Package in inconsistent state"
 msgid_plural "Packages in inconsistent state"
-msgstr[0] "Pacaid ann an staid mì-chòrdail"
-msgstr[1] "Pacaid ann an staid mì-chòrdail"
-msgstr[2] "Pacaidean ann an staid mì-chòrdail"
+msgstr[0] "Pacaid ann an staid neo-chunbhalach"
+msgstr[1] "Pacaidean ann an staid neo-chunbhalach"
+msgstr[2] "Pacaidean ann an staid neo-chunbhalach"
+msgstr[3] "Pacaidean ann an staid neo-chunbhalach"
 
 #: ../DistUpgrade/DistUpgradeController.py:880
 #, python-format
@@ -506,17 +512,21 @@ msgid_plural ""
 "but no archive can be found for them. Please reinstall the packages manually "
 "or remove them from the system."
 msgstr[0] ""
-"Tha am pacaid '%s' ann an staid mi-chòrdail agus feumail air ath-stàlachadh, "
-"ach chan eil lorg air tasglann dha. Ath-stàlaich sibh am pacaid le làimh no "
-"gluasad e bhon t-siostam."
+"Tha a' phacaid \"%s\" ann an staid neo-chunbhalach agus feumaidh tu a "
+"stàladh às ùr ach cha do lorg sinn tasg-lann air a shon. Stàlaich a' phacaid "
+"a làimh no thoirt e air falbh on t-siostam."
 msgstr[1] ""
-"Tha am pacaid '%s' ann an staid mi-chòrdail agus feumail air ath-stàlachadh, "
-"ach chan eil lorg air tasglann dha. Ath-stàlaich sibh am pacaid le làimh no "
-"gluasad e bhon t-siostam."
+"Tha na pacaidean \"%s\" ann an staid neo-chunbhalach agus feumaidh tu a "
+"stàladh às ùr ach cha do lorg sinn tasg-lann air a shon. Stàlaich a' phacaid "
+"a làimh no thoirt e air falbh on t-siostam."
 msgstr[2] ""
-"Tha na pacaidean '%s' ann an staid mi-chòrdail agus feumail air ath-"
-"stàlachadh, ach chan eil lorg air tasglann dha. Ath-stàlaich sibh am pacaid "
-"le làimh no gluasad e bhon t-siostam."
+"Tha na pacaidean \"%s\" ann an staid neo-chunbhalach agus feumaidh tu a "
+"stàladh às ùr ach cha do lorg sinn tasg-lann air a shon. Stàlaich a' phacaid "
+"a làimh no thoirt e air falbh on t-siostam."
+msgstr[3] ""
+"Tha na pacaidean \"%s\" ann an staid neo-chunbhalach agus feumaidh tu a "
+"stàladh às ùr ach cha do lorg sinn tasg-lann air a shon. Stàlaich a' phacaid "
+"a làimh no thoirt e air falbh on t-siostam."
 
 #: ../DistUpgrade/DistUpgradeController.py:937
 msgid "Error during update"
@@ -1160,7 +1170,7 @@ msgstr "A' faighinn faidhle %li de %li air %sB/s"
 #: ../DistUpgrade/DistUpgradeViewKDE.py:400
 #, python-format
 msgid "About %s remaining"
-msgstr "Mu dhèidhinn  %s air fhàgal"
+msgstr "Mu thuaiream %s air fhàgail"
 
 #: ../DistUpgrade/DistUpgradeViewGtk3.py:164
 #: ../DistUpgrade/DistUpgradeViewKDE.py:252
@@ -1320,7 +1330,7 @@ msgstr "Fiosrachadh"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:753
 msgid "&Start Upgrade"
-msgstr ""
+msgstr "Tòi&sich air an àrdachadh"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:755
 #: ../DistUpgrade/DistUpgradeViewKDE.py:800
@@ -1391,33 +1401,37 @@ msgstr "A bheil thu airson sgur dhen àrdachadh?"
 #, python-format
 msgid "%li day"
 msgid_plural "%li days"
-msgstr[0] "%li làtha"
-msgstr[1] "%li làtha"
+msgstr[0] "%li latha"
+msgstr[1] "%li latha"
 msgstr[2] "%li làithean"
+msgstr[3] "%li latha"
 
 #: ../DistUpgrade/DistUpgradeView.py:83
 #, python-format
 msgid "%li hour"
 msgid_plural "%li hours"
-msgstr[0] "%li uair"
+msgstr[0] "%li uair a thìde"
 msgstr[1] "%li uair"
-msgstr[2] "%li uairean"
+msgstr[2] "%li uairean a thìde"
+msgstr[3] "%li uair a thìde"
 
 #: ../DistUpgrade/DistUpgradeView.py:85
 #, python-format
 msgid "%li minute"
 msgid_plural "%li minutes"
-msgstr[0] "%li mionaid"
-msgstr[1] "%li mionaid"
+msgstr[0] "%li mhionaid"
+msgstr[1] "%li mhionaid"
 msgstr[2] "%li mionaidean"
+msgstr[3] "%li mionaid"
 
 #: ../DistUpgrade/DistUpgradeView.py:86
 #, python-format
 msgid "%li second"
 msgid_plural "%li seconds"
 msgstr[0] "%li diog"
-msgstr[1] "%li diog"
+msgstr[1] "%li dhiog"
 msgstr[2] "%li diogan"
+msgstr[3] "%li diog"
 
 #. TRANSLATORS: you can alter the ordering of the remaining time
 #. information here if you shuffle %(str_days)s %(str_hours)s %(str_minutes)s
@@ -1499,14 +1513,17 @@ msgid_plural ""
 "%(amount)d installed packages are no longer supported by Canonical. You can "
 "still get support from the community."
 msgstr[0] ""
-"Chan eil Cananical a thuilleadh thoirt taic ris a' phacaid stàlaichte "
-"%(amount)d. 'S urrainn dhut fhathast fhaighinn taic bhon coimhearsnachdh."
+"Tha %(amount)d phacaid ann nach eil Canonical a' cur taic ris tuilleadh. "
+"Gheibh thu taic on choimhearsnachd fhathast."
 msgstr[1] ""
-"Chan eil Cananical a thuilleadh thoirt taic ris a' phacaid stàlaichte "
-"%(amount)d. 'S urrainn dhut fhathast fhaighinn taic bhon coimhearsnachdh."
+"Tha %(amount)d phacaid ann nach eil Canonical a' cur taic ris tuilleadh. "
+"Gheibh thu taic on choimhearsnachd fhathast."
 msgstr[2] ""
-"Chan eil Cananical a thuilleadh thoirt taic ri na pacaidean stàlaichte "
-"%(amount)d. 'S urrainn dhut fhathast fhaighinn taic bhon coimhearsnachdh."
+"Tha %(amount)d pacaidean ann nach eil Canonical a' cur taic ris tuilleadh. "
+"Gheibh thu taic on choimhearsnachd fhathast."
+msgstr[3] ""
+"Tha %(amount)d pacaid ann nach eil Canonical a' cur taic ris tuilleadh. "
+"Gheibh thu taic on choimhearsnachd fhathast."
 
 #. FIXME: make those two separate lines to make it clear
 #. that the "%" applies to the result of ngettext
@@ -1514,25 +1531,28 @@ msgstr[2] ""
 #, python-format
 msgid "%d package is going to be removed."
 msgid_plural "%d packages are going to be removed."
-msgstr[0] "Bithidh pacaid %d a' gluasad."
-msgstr[1] "Bithidh pacaid %d a' gluasad."
-msgstr[2] "Bithidh pacaidean %d nan gluasad."
+msgstr[0] "Thèid %d phacaid a thoirt air falbh."
+msgstr[1] "Thèid %d phacaid a thoirt air falbh."
+msgstr[2] "Thèid %d pacaidean a thoirt air falbh."
+msgstr[3] "Thèid %d pacaid a thoirt air falbh."
 
 #: ../DistUpgrade/DistUpgradeView.py:386
 #, python-format
 msgid "%d new package is going to be installed."
 msgid_plural "%d new packages are going to be installed."
-msgstr[0] "Bithidh pacaid ùr %d ga stàlachadh"
-msgstr[1] "Bithidh pacaid ùr %d ga stàlachadh"
-msgstr[2] "Bithidh pacaidean ùr %d nan stàlachadh"
+msgstr[0] "Thèid %d phacaid ùr a stàladh."
+msgstr[1] "Thèid %d phacaid ùr a stàladh."
+msgstr[2] "Thèid %d pacaidean ùr a stàladh."
+msgstr[3] "Thèid %d pacaid ùr a stàladh."
 
 #: ../DistUpgrade/DistUpgradeView.py:392
 #, python-format
 msgid "%d package is going to be upgraded."
 msgid_plural "%d packages are going to be upgraded."
-msgstr[0] "Bithidh pacaid %d ga leasachadh"
-msgstr[1] "Bithidh pacaid %d ga leasachadh"
-msgstr[2] "Bithidh pacaidean %d nan leasachadh"
+msgstr[0] "Thèid %d phacaid àrdachadh."
+msgstr[1] "Thèid %d phacaid àrdachadh."
+msgstr[2] "Thèid %d pacaidean àrdachadh."
+msgstr[3] "Thèid %d pacaid àrdachadh."
 
 #: ../DistUpgrade/DistUpgradeView.py:400
 #, python-format
@@ -1760,7 +1780,7 @@ msgstr "Àrdachadh an sgaoilidh"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:19
 msgid "<b><big>Upgrading Ubuntu to version 15.10</big></b>"
-msgstr ""
+msgstr "<b><big>Ag àrdachadh Ubuntu gu tionndadh 15.10</big></b>"
 
 #: ../data/gtkbuilder/DistUpgrade.ui.h:20
 msgid "    "
