--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 ubuntu-release-upgrader (1:16.04.2) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
-    not being available in the cache.
+    not being available in the cache. (LP: #1511831)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 28 Oct 2015 13:25:33 -0700
 
