--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:16.04.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.2) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
     not being available in the cache. (LP: #1511831)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 28 Oct 2015 13:25:33 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 02 Nov 2015 09:50:02 -0800
 
 ubuntu-release-upgrader (1:16.04.1) xenial; urgency=medium
 
