Fix changelog as the upload was for xenial not wily

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.2) wily; urgency=medium
+ubuntu-release-upgrader (1:16.04.2) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
     not being available in the cache. (LP: #1511831)
