* DistUpgrade/DistUpgradeController.py: if a BaseMetaPkg has no origins,   because an Ubuntu mirror has been deactivated, then create a useful   sources.list file that parallels the one for the deactivated mirror.   (LP: #1511783) * utils/update_mirrors.py: Instead of just appending new mirrors to the   mirrors.cfg file also remove mirrors that are no longer valid.   (LP: #1463680)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ubuntu-release-upgrader (1:16.04.3) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: if a BaseMetaPkg has no origins,
+    because an Ubuntu mirror has been deactivated, then create a useful
+    sources.list file that parallels the one for the deactivated mirror.
+    (LP: #1511783)
+  * utils/update_mirrors.py: Instead of just appending new mirrors to the
+    mirrors.cfg file also remove mirrors that are no longer valid.
+    (LP: #1463680)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 18 Nov 2015 10:55:48 -0800
+
 ubuntu-release-upgrader (1:16.04.2) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
