releasing package ubuntu-release-upgrader version 1:16.04.3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.3) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: if a BaseMetaPkg has no origins,
     because an Ubuntu mirror has been deactivated, then create a useful
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:16.04.3) UNRELEASED; urgency=medium
     mirrors.cfg file also remove mirrors that are no longer valid.
     (LP: #1463680)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 18 Nov 2015 10:55:48 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 18 Nov 2015 11:05:19 -0800
 
 ubuntu-release-upgrader (1:16.04.2) xenial; urgency=medium
 
