DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of apt is installed rather than using the apt VERSION string. (LP: #1306065)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.4) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
+    apt is installed rather than using the apt VERSION string. (LP: #1306065)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 12 Jan 2016 15:14:31 -0800
+
 ubuntu-release-upgrader (1:16.04.3) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py: if a BaseMetaPkg has no origins,
