--- a/po/bs.po
+++ b/po/bs.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2013-05-23 02:43+0000\n"
-"Last-Translator: Brian Murray <brian@ubuntu.com>\n"
+"PO-Revision-Date: 2016-02-06 15:27+0000\n"
+"Last-Translator: Kenan Gutić <Unknown>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2016-01-29 05:34+0000\n"
-"X-Generator: Launchpad (build 17902)\n"
+"X-Launchpad-Export-Date: 2016-02-07 05:45+0000\n"
+"X-Generator: Launchpad (build 17908)\n"
 "Language: bs\n"
 
 #. TRANSLATORS: %s is a country
@@ -735,6 +735,13 @@ msgid ""
 "In the case of an overloaded mirror, you may want to try the upgrade again "
 "later."
 msgstr ""
+"Nakon ažuriranja informacija o paketima, bitni paket '%s' nije pronađen. "
+"Razlog za to možete biti nedostatak službenih mirror servera u vašoj listi "
+"izvora programa ili zbog preopterećenja na mirror server koji koristite. "
+"Pogledajte /etc/apt/sources.list i provjerite trenutnu listu konfigurisanih "
+"izvora programa.\n"
+"U slučaju preopterećenog mirror servera pokušajte nadogradnju uraditi "
+"kasnije."
 
 #: ../DistUpgrade/DistUpgradeController.py:1795
 #: ../DistUpgrade/DistUpgradeController.py:1851
