releasing package ubuntu-release-upgrader version 1:16.04.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
     apt is installed rather than using the apt VERSION string. (LP: #1306065)
