DistUpgrade/DistUpgradeView.py: switch from package manager ResultFailed to RESULT_FAILED, apparently the former was obsoleted some time ago. (LP: #1292335)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:16.04.5) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeView.py: switch from package manager ResultFailed
+    to RESULT_FAILED, apparently the former was obsoleted some time ago.
+    (LP: #1292335)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 08 Feb 2016 14:37:08 -0800
+
 ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
