--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:16.04.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.5) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeView.py: switch from package manager ResultFailed
     to RESULT_FAILED, apparently the former was obsoleted some time ago.
     (LP: #1292335)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 08 Feb 2016 14:37:08 -0800
+ -- Brian Murray <brian@ubuntu.com>  Fri, 12 Feb 2016 10:27:15 -0800
 
 ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium
 
