utils/demotions.py: Set Apt::Architectures too so that the host's multiarch setup doesn't get in the way.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.6) UNRELEASED; urgency=medium
+
+  * utils/demotions.py: Set Apt::Architectures too so that the host's
+    multiarch setup doesn't get in the way.
+
+ -- Iain Lane <iain@orangesquash.org.uk>  Tue, 16 Feb 2016 14:11:22 +0000
+
 ubuntu-release-upgrader (1:16.04.5) xenial; urgency=medium
 
   * DistUpgrade/DistUpgradeView.py: switch from package manager ResultFailed
