--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ubuntu-release-upgrader (1:16.04.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.6) xenial; urgency=medium
 
   * utils/demotions.py: Set Apt::Architectures too so that the host's
     multiarch setup doesn't get in the way.
   * DistUpgrade/DistUpgradeViewGtk3.py,
     DistUpgrade/ReleaseNotesViewerWebkit.py: Port to WebKit 2 (LP: #1469221)
 
- -- Iain Lane <iain@orangesquash.org.uk>  Tue, 16 Feb 2016 14:11:22 +0000
+ -- Iain Lane <iain@orangesquash.org.uk>  Tue, 16 Feb 2016 15:09:37 +0000
 
 ubuntu-release-upgrader (1:16.04.5) xenial; urgency=medium
 
