--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.7) UNRELEASED; urgency=medium
+
+  * Keep fallback compatibility with Vte 2.90 and WebKit 1, required to run on
+    14.04
+
+ -- Iain Lane <iain.lane@canonical.com>  Tue, 23 Feb 2016 16:23:34 +0000
+
 ubuntu-release-upgrader (1:16.04.6) xenial; urgency=medium
 
   * utils/demotions.py: Set Apt::Architectures too so that the host's
