--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ubuntu-release-upgrader (1:16.04.7) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.7) xenial; urgency=medium
 
+  [ Iain Lane ]
   * Keep fallback compatibility with Vte 2.90 and WebKit 1, required to run on
     14.04 (LP: #1548858)
 
- -- Iain Lane <iain.lane@canonical.com>  Tue, 23 Feb 2016 16:23:34 +0000
+ -- Brian Murray <brian@ubuntu.com>  Tue, 23 Feb 2016 14:55:51 -0800
 
 ubuntu-release-upgrader (1:16.04.6) xenial; urgency=medium
 
