* data/release-upgrades:   - set the default upgrade prompt to "lts" instead of "normal" so that     LTS users will only see the automatic upgrade prompt when the next LTS     version is ready. (LP: #1550927)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:16.04.8) UNRELEASED; urgency=medium
+
+  * data/release-upgrades:
+    - set the default upgrade prompt to "lts" instead of "normal" so that
+      LTS users will only see the automatic upgrade prompt when the next LTS
+      version is ready. (LP: #1550927)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 29 Feb 2016 14:33:25 -0800
+
 ubuntu-release-upgrader (1:16.04.7) xenial; urgency=medium
 
   [ Iain Lane ]
