--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-ubuntu-release-upgrader (1:16.04.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.8ubuntu1) UNRELEASED; urgency=medium
 
   * data/release-upgrades:
     - set the default upgrade prompt to "lts" instead of "normal" so that
       LTS users will only see the automatic upgrade prompt when the next LTS
       version is ready. (LP: #1550927)
+  * update demoted.cfg, demoted.cfg.trusty, mirrors.cfg
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 29 Feb 2016 14:33:25 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 29 Feb 2016 14:56:51 -0800
 
 ubuntu-release-upgrader (1:16.04.7) xenial; urgency=medium
 
