releasing package ubuntu-release-upgrader version 1:16.04.8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.8) xenial; urgency=medium
 
   * data/release-upgrades:
     - set the default upgrade prompt to "lts" instead of "normal" so that
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:16.04.8) UNRELEASED; urgency=medium
   * update demoted.cfg, demoted.cfg.trusty, mirrors.cfg
   * DistUpgrade/DistUpgradeAptCdrom.py: fix double open. (LP: #1551929)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 03 Mar 2016 08:50:15 -0800
+ -- Brian Murray <brian@ubuntu.com>  Thu, 03 Mar 2016 11:36:41 -0800
 
 ubuntu-release-upgrader (1:16.04.7) xenial; urgency=medium
 
