--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:16.04.9) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeController.py: fix typo in variable name for
+    RELEASE_UPGRADER_ALLOW_THIRD_PARTY; this will help running with third-
+    party mirrors in sources via just the environment variable for one-shot
+    deals.
+
+ -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 29 Mar 2016 23:18:01 -0400
+
 ubuntu-release-upgrader (1:16.04.8) xenial; urgency=medium
 
   * data/release-upgrades:
