--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ ubuntu-release-upgrader (1:16.04.9ubuntu1) UNRELEASED; urgency=medium
   [ Tim Lunn ]
   * DistUpgradeQuirks.py: add a quirk to add a gnome-session idle inhibitor
     this will fix the screensaver activating on Ubuntu GNOME (LP: #1565177)
+    Leave this inhibitor in place on GNOME desktop to workaround broken
+    lock screen after upgrade (LP: #1565178)
 
  -- Tim Lunn <tim@feathertop.org>  Sat, 02 Apr 2016 14:28:20 +1100
 
