fix changelog version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.9ubuntu1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.9) UNRELEASED; urgency=medium
 
   [ Mathieu Trudel-Lapierre ]
   * DistUpgrade/DistUpgradeController.py: fix typo in variable name for
