--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.9) xenial; urgency=medium
 
   [ Mathieu Trudel-Lapierre ]
   * DistUpgrade/DistUpgradeController.py: fix typo in variable name for
@@ -11,7 +11,7 @@ ubuntu-release-upgrader (1:16.04.9) UNRELEASED; urgency=medium
     are not run.
   * tests/test_quirks.py: disable fglrx test since it is not in xenial.
 
- -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 29 Mar 2016 23:18:01 -0400
+ -- Brian Murray <brian@ubuntu.com>  Wed, 06 Apr 2016 10:50:23 -0700
 
 ubuntu-release-upgrader (1:16.04.8) xenial; urgency=medium
 
