--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.10) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeViewKDE.py: Really fix call to showConffile.
+    (LP: #1509655)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 06 Apr 2016 16:20:38 -0700
+
 ubuntu-release-upgrader (1:16.04.9) xenial; urgency=medium
 
   [ Mathieu Trudel-Lapierre ]
