releasing package ubuntu-release-upgrader version 1:16.04.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.10) xenial; urgency=medium
 
   [ Tim Lunn ]
   * DistUpgrade/DistUpgradeController.py: set a logind sleep inhibitor
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:16.04.10) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeViewKDE.py: Really fix call to showConffile.
     (LP: #1509655)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 07 Apr 2016 11:25:27 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 07 Apr 2016 15:26:25 -0700
 
 ubuntu-release-upgrader (1:16.04.9) xenial; urgency=medium
 
