DistUpgrade/ReleaseAnnouncement: provide a link to the release notes of the version of Ubuntu to which users are upgrading. (LP: #1535098)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.11) UNRELEASED; urgency=medium
+
+  * DistUpgrade/ReleaseAnnouncement: provide a link to the release notes of
+    the version of Ubuntu to which users are upgrading. (LP: #1535098)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 08 Apr 2016 09:32:14 -0700
+
 ubuntu-release-upgrader (1:16.04.10) xenial; urgency=medium
 
   [ Tim Lunn ]
