--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.04.11) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.11) xenial; urgency=medium
 
   [ Tim Lunn ]
   * DistUpgradeQuirks.py: add a quirk to add a gnome-session idle inhibitor
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:16.04.11) UNRELEASED; urgency=medium
   * DistUpgrade/ReleaseAnnouncement: provide a link to the release notes of
     the version of Ubuntu to which users are upgrading. (LP: #1535098)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 08 Apr 2016 09:32:14 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 14 Apr 2016 14:45:29 -0700
 
 ubuntu-release-upgrader (1:16.04.10) xenial; urgency=medium
 
