--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.04.12) UNRELEASED; urgency=medium
+
+  * DistUpgradeQuirks.py: Fix the quirk which inhibits screensavers.
+    (LP: #1570947)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 15 Apr 2016 17:04:54 -0700
+
 ubuntu-release-upgrader (1:16.04.11) xenial; urgency=medium
 
   [ Tim Lunn ]
