releasing package ubuntu-release-upgrader version 1:16.04.12

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:16.04.12) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.12) xenial; urgency=medium
 
   * DistUpgradeQuirks.py: Fix the quirk which inhibits screensavers.
     (LP: #1570947)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 15 Apr 2016 17:04:54 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 15 Apr 2016 17:11:11 -0700
 
 ubuntu-release-upgrader (1:16.04.11) xenial; urgency=medium
 
