Fix Greek translations of the keys for yes/no.  LP: #1572416.

--- a/po/el.po
+++ b/po/el.po
@@ -1595,7 +1595,7 @@ msgstr "Για να συνεχίσετε πιέστε [ENTER]"
 #: ../DistUpgrade/DistUpgradeViewText.py:247
 #: ../DistUpgrade/DistUpgradeViewText.py:254
 msgid "Continue [yN] "
-msgstr "Συνέχεια [yN] "
+msgstr "Συνέχεια [νΟ] "
 
 #: ../DistUpgrade/DistUpgradeViewText.py:209
 #: ../DistUpgrade/DistUpgradeViewText.py:247
@@ -1643,7 +1643,7 @@ msgstr "Αναβάθμιση: %s\n"
 
 #: ../DistUpgrade/DistUpgradeViewText.py:261
 msgid "Continue [Yn] "
-msgstr "Συνέχεια [Yn] "
+msgstr "Συνέχεια [Νο] "
 
 #: ../DistUpgrade/DistUpgradeViewText.py:282
 msgid ""
