--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:16.04.13) UNRELEASED; urgency=medium
+
+  * Fix Greek translations of the keys for yes/no.  LP: #1572416.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 21 Apr 2016 14:46:15 -0700
+
 ubuntu-release-upgrader (1:16.04.12) xenial; urgency=medium
 
   * DistUpgradeQuirks.py: Fix the quirk which inhibits screensavers.
