Properly handle the indicated default option on the 'confirm changes' prompt.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 ubuntu-release-upgrader (1:16.04.13) UNRELEASED; urgency=medium
 
   * Fix Greek translations of the keys for yes/no.  LP: #1572416.
+  * Properly handle the indicated default option on the 'confirm changes'
+    prompt.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 21 Apr 2016 14:46:15 -0700
 
