One more missing translation fix.

--- a/po/el.po
+++ b/po/el.po
@@ -1651,7 +1651,7 @@ msgid ""
 "If you select 'y' the system will be restarted."
 msgstr ""
 "Για να ολοκληρωθεί η αναβάθμιση, απαιτείται επανεκκίνηση.\n"
-"Αν επιλέξετε 'y' ο υπολογιστής θα επανεκκινήσει."
+"Αν επιλέξετε 'ν' ο υπολογιστής θα επανεκκινήσει."
 
 #: ../DistUpgrade/GtkProgress.py:71
 #, python-format
