--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubuntu-release-upgrader (1:16.04.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.04.13) xenial-proposed; urgency=medium
 
+  [ Steve Langasek ]
   * Fix Greek translations of the keys for yes/no.  LP: #1572416.
   * Properly handle the indicated default option on the 'confirm changes'
     prompt.
@@ -8,7 +9,7 @@ ubuntu-release-upgrader (1:16.04.13) UNRELEASED; urgency=medium
     from stdin, since the latter fails to handle backspacing over unicode
     characters.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 21 Apr 2016 16:31:38 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 22 Apr 2016 12:41:34 -0700
 
 ubuntu-release-upgrader (1:16.04.12) xenial; urgency=medium
 
