--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:16.04.14) UNRELEASED; urgency=medium
+
+  * No-change rebuild to pick up translations from Launchpad (including the
+    Greek translations, which had been accidentally dropped in the previous
+    upload due to a collision with the importer).
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 25 Apr 2016 10:58:43 -0700
+
 ubuntu-release-upgrader (1:16.04.13) xenial-proposed; urgency=medium
 
   [ Steve Langasek ]
