data/release-upgrades: switch prompt from LTS to normal (LP: #1577165)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:16.10.2) UNRELEASED; urgency=medium
+
+  * data/release-upgrades: switch prompt from LTS to normal (LP: #1577165)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 10 May 2016 13:51:58 -0700
+
 ubuntu-release-upgrader (1:16.10.1) yakkety; urgency=medium
 
   * DistUpgrade/{EOL,}ReleaseAnnouncement,
