--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 ubuntu-release-upgrader (1:16.10.2) UNRELEASED; urgency=medium
 
   * data/release-upgrades: switch prompt from LTS to normal (LP: #1577165)
+  * DistUpgrade/DistUpgradeController.py: instead of statically setting
+    matcherPath, for a SourcesList, to "." set it to datadir which may be "."
+    or something else entirely (like when we are running a test).
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 10 May 2016 13:51:58 -0700
 
