--- a/po/lt.po
+++ b/po/lt.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: update-manager HEAD\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2013-07-07 19:13+0000\n"
-"Last-Translator: Aurimas Fišeras <Unknown>\n"
+"PO-Revision-Date: 2016-07-03 16:01+0000\n"
+"Last-Translator: Moo <hazap@hotmail.com>\n"
 "Language-Team: Lithuanian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "(n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2016-05-18 05:39+0000\n"
-"X-Generator: Launchpad (build 18025)\n"
+"X-Launchpad-Export-Date: 2016-07-04 06:05+0000\n"
+"X-Generator: Launchpad (build 18115)\n"
 "Language: lt\n"
 
 #. TRANSLATORS: %s is a country
@@ -860,7 +860,7 @@ msgstr "Klaidos pranešimas yra „%s“."
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:139
 msgid "&Upgrade"
-msgstr ""
+msgstr "&Atnaujinti"
 
 #: ../DistUpgrade/DistUpgradeFetcherKDE.py:142
 msgid "&Cancel"
@@ -1243,7 +1243,7 @@ msgstr "Informacija"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:753
 msgid "&Start Upgrade"
-msgstr ""
+msgstr "&Pradėti atnaujinimą"
 
 #: ../DistUpgrade/DistUpgradeViewKDE.py:755
 #: ../DistUpgrade/DistUpgradeViewKDE.py:800
@@ -1510,7 +1510,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeViewText.py:81
 #, python-format
 msgid "Progress: [%3i%%]"
-msgstr ""
+msgstr "Eiga: [%3i%%]"
 
 #: ../DistUpgrade/DistUpgradeViewText.py:139
 msgid ""
