DistUpgrade/{EOL,Devel}ReleaseAnnouncement: update for 16.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ubuntu-release-upgrader (1:16.10.2) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeController.py: instead of statically setting
     matcherPath, for a SourcesList, to "." set it to datadir which may be "."
     or something else entirely (like when we are running a test).
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement: update for 16.10
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 10 May 2016 13:51:58 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 14 Jul 2016 10:39:22 -0700
 
 ubuntu-release-upgrader (1:16.10.1) yakkety; urgency=medium
 
