--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.10.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.10.2) yakkety; urgency=medium
 
   * data/release-upgrades: switch prompt from LTS to normal (LP: #1577165)
   * DistUpgrade/DistUpgradeController.py: instead of statically setting
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:16.10.2) UNRELEASED; urgency=medium
     or something else entirely (like when we are running a test).
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement: update for 16.10
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 14 Jul 2016 10:39:22 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 14 Jul 2016 12:11:19 -0700
 
 ubuntu-release-upgrader (1:16.10.1) yakkety; urgency=medium
 
