--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:16.10.3) UNRELEASED; urgency=medium
+
+  * pre-build.sh: Ubuntu.info needs to be included in the
+    data-sources-list-test data directory for the inactive mirror test to
+    pass.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 22 Jul 2016 14:59:22 -0700
+
 ubuntu-release-upgrader (1:16.10.2) yakkety; urgency=medium
 
   * data/release-upgrades: switch prompt from LTS to normal (LP: #1577165)
