--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:16.10.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.10.3) yakkety; urgency=medium
 
   * pre-build.sh: Ubuntu.info needs to be included in the
     data-sources-list-test data directory for the inactive mirror test to
     pass.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 22 Jul 2016 14:59:22 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 22 Jul 2016 15:01:47 -0700
 
 ubuntu-release-upgrader (1:16.10.2) yakkety; urgency=medium
 
