DistUpgradeController.py: fix UnboundLocalError - thanks to Launchpad user MissionSix for the patch.  (LP: #1611470)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.10.4) UNRELEASED; urgency=medium
+
+  * DistUpgradeController.py: fix UnboundLocalError - thanks to Launchpad user
+    MissionSix for the patch.  (LP: #1611470)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 10 Aug 2016 08:08:01 -0700
+
 ubuntu-release-upgrader (1:16.10.3) yakkety; urgency=medium
 
   * pre-build.sh: Ubuntu.info needs to be included in the
