Launchpad automatic translations update.

--- a/po/nb.po
+++ b/po/nb.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2013-06-19 12:32+0000\n"
+"PO-Revision-Date: 2016-08-28 14:56+0000\n"
 "Last-Translator: Åka Sikrom <Unknown>\n"
 "Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2016-08-18 05:44+0000\n"
-"X-Generator: Launchpad (build 18169)\n"
+"X-Launchpad-Export-Date: 2016-08-29 06:31+0000\n"
+"X-Generator: Launchpad (build 18179)\n"
 "Language: nb\n"
 
 #. TRANSLATORS: %s is a country
@@ -175,12 +175,12 @@ msgstr "Den essensielle pakka «%s» er merket for fjerning."
 #: ../DistUpgrade/DistUpgradeCache.py:758
 #, python-format
 msgid "Trying to install blacklisted version '%s'"
-msgstr "Prøver å installere den svartelistede versjonen «%s»"
+msgstr "Prøver å installere svartelistet versjon «%s»"
 
 #: ../DistUpgrade/DistUpgradeCache.py:877
 #, python-format
 msgid "Can't install '%s'"
-msgstr "Klarer ikke å installere «%s»"
+msgstr "Klarte ikke å installere «%s»"
 
 #: ../DistUpgrade/DistUpgradeCache.py:878
 msgid ""
@@ -257,15 +257,16 @@ msgid ""
 "If you continue, an additional ssh daemon will be started at port '%s'.\n"
 "Do you want to continue?"
 msgstr ""
-"Denne økten kjører over SSH. Du frarådes å oppgradere på denne måten, fordi "
-"det er vanskeligere å gjenopprette systemet hvis det oppstår feil.\n"
+"Denne økta kjører via SSH. Du frarådes å oppgradere slik, fordi det er "
+"vanskelig å gjenopprette systemet hvis det oppstår feil.\n"
 "\n"
-"Hvis du fortsetter, vil en ekstra SSH-tjeneste startes på port «%s».\n"
+"Hvis du fortsetter, starter oppgraderingsverktøyet en ekstra ssh-tjeneste "
+"som lytter til port «%s».\n"
 "Vil du fortsette?"
 
 #: ../DistUpgrade/DistUpgradeController.py:315
 msgid "Starting additional sshd"
-msgstr "Starter en ekstra SSHD"
+msgstr "Starter ekstra sshd"
 
 #: ../DistUpgrade/DistUpgradeController.py:316
 #, python-format
@@ -274,9 +275,10 @@ msgid ""
 "started on port '%s'. If anything goes wrong with the running ssh you can "
 "still connect to the additional one.\n"
 msgstr ""
-"En ekstra SSHD startes på port %s for å gjøre det lettere å gjenoppta økten, "
-"og evt. starte gjenoppretting. Slik har du fremdeles tilgang til maskina i "
-"tilfelle noe skulle gå galt med SSH-økten du kjører nå.\n"
+"Oppgraderingsverktøyet starter en ekstra sshd-prosess på port %s for å gjøre "
+"det lettere å gjenoppta økta i tilfelle det oppstår feil. Slik får du "
+"fremdeles tilgang til maskinen selv om noe evt. skulle gå galt med ssh-økta "
+"som kjører nå.\n"
 
 #: ../DistUpgrade/DistUpgradeController.py:324
 #, python-format
@@ -288,7 +290,7 @@ msgid ""
 msgstr ""
 "Hvis du kjører en brannmur, er det viktig at du lar denne porten stå åpen "
 "under oppgraderinga. Med tanke på at åpning av porter er potensielt farlig, "
-"gjøres ikke dette automatisk. Du kan f.eks. åpne porten ved å bruke følgende "
+"blir ikke dette gjort automatisk. Du kan åpne porten med f.eks. følgende "
 "kommando:\n"
 "«%s»"
 
