po/POTFILES.in: use check_new_release_gtk.py to allow for fuzzy translations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ ubuntu-release-upgrader (1:16.10.4) UNRELEASED; urgency=medium
 
   * DistUpgradeController.py: fix UnboundLocalError - thanks to Launchpad user
     MissionSix for the patch.  (LP: #1611470)
+  * po/POTFILES.in: use check_new_release_gtk.py to allow for fuzzy
+    translations.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 10 Aug 2016 08:08:01 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 15 Aug 2016 14:10:55 -0700
 
 ubuntu-release-upgrader (1:16.10.3) yakkety; urgency=medium
 
