releasing package ubuntu-release-upgrader version 1:16.10.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:16.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.10.4) yakkety; urgency=medium
 
   [ Brian Murray ]
   * DistUpgradeController.py: fix UnboundLocalError - thanks to Launchpad user
@@ -11,7 +11,7 @@ ubuntu-release-upgrader (1:16.10.4) UNRELEASED; urgency=medium
     support for apt-secure trustedparts (key fragments in
     /etc/apt/trusted.gpg.d). (LP: #1628415)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 15 Aug 2016 14:10:55 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 03 Oct 2016 16:09:42 -0700
 
 ubuntu-release-upgrader (1:16.10.3) yakkety; urgency=medium
 
