DistUpgradeViewNonInteractive.py: Instead of tripping over errors when writing progress to stdout just ignore them so that the upgrade can continue. (LP: #1614576)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:16.10.5) yakkety; urgency=medium
+
+  * DistUpgradeViewNonInteractive.py: Instead of tripping over errors when
+    writing progress to stdout just ignore them so that the upgrade can
+    continue. (LP: #1614576)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 05 Oct 2016 10:40:39 -0700
+
 ubuntu-release-upgrader (1:16.10.4) yakkety; urgency=medium
 
   [ Brian Murray ]
