--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:16.10.6) UNRELEASED; urgency=medium
+
+  * DistUpgradeViewNonInteractive.py: When handling an exception also log what
+    the traceback causing the exception was.  (LP: #1632047)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 10 Oct 2016 11:03:45 -0700
+
 ubuntu-release-upgrader (1:16.10.5) yakkety; urgency=medium
 
   * DistUpgradeViewNonInteractive.py: Instead of tripping over errors when
