releasing package ubuntu-release-upgrader version 1:16.10.6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:16.10.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:16.10.6) yakkety; urgency=medium
 
   * DistUpgradeViewNonInteractive.py: When handling an exception also log what
     the traceback causing the exception was.  (LP: #1632047)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 10 Oct 2016 11:03:45 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 10 Oct 2016 11:05:13 -0700
 
 ubuntu-release-upgrader (1:16.10.5) yakkety; urgency=medium
 
