--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:17.04.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:
+    - updated for 16.10 -> 17.04
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 20 Oct 2016 05:45:56 -0700
+
 ubuntu-release-upgrader (1:16.10.6) yakkety; urgency=medium
 
   * DistUpgradeViewNonInteractive.py: When handling an exception also log what
