--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:17.04.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.04.1) zesty; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/DistUpgrade/window_main.ui,
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:17.04.1) UNRELEASED; urgency=medium
     pre-build.sh:
     - updated for 16.10 -> 17.04
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 20 Oct 2016 05:45:56 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 20 Oct 2016 05:56:37 -0700
 
 ubuntu-release-upgrader (1:16.10.6) yakkety; urgency=medium
 
