--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.04.2) UNRELEASED; urgency=medium
+
+  * DistUpgrade/ReleaseNotesViewerWebkit.py: fix indentation of function
+    _on_navigation_policy_decision_requested. (LP: #1635155)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Oct 2016 00:52:50 -0700
+
 ubuntu-release-upgrader (1:17.04.1) zesty; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
