--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:17.04.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:17.04.2) zesty; urgency=medium
 
   * DistUpgrade/ReleaseNotesViewerWebkit.py: fix indentation of function
     _on_navigation_policy_decision_requested. (LP: #1635155)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 21 Oct 2016 00:52:50 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Oct 2016 00:55:46 -0700
 
 ubuntu-release-upgrader (1:17.04.1) zesty; urgency=medium
 
