--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:17.04.3) UNRELEASED; urgency=medium
+
+  * data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported
+    metapkgs. (LP: #1632665)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 Oct 2016 14:00:59 -0700
+
 ubuntu-release-upgrader (1:17.04.2) zesty; urgency=medium
 
   * DistUpgrade/ReleaseNotesViewerWebkit.py: fix indentation of function
